# otlp-embedded

./: .gitignore  Cargo.toml  README.md  a.json  a.txt  b.txt  build.rs  jaeger-mock.json  tempo-mock.json
examples/: basic.rs  mock_ui.rs
jaeger-ui/: AGENTS.md  README
proto/: README
src/: jaeger.rs  lib.rs  limiter.rs  main.rs  proto.rs  service.rs  state.rs  trace.rs
src/jaeger/: model.rs  server.rs  ui.rs
tests/: jaeger.json  tempo.json
