[package]
name = "otlp-embedded"
description = "In-memory OpenTelemetry trace collector and Web UI visualizer."
version = "0.0.1"
edition = "2021"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
repository = "https://github.com/risingwavelabs/otlp-embedded"
keywords = ["tracing", "opentelemetry", "otlp", "web", "debug"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"

[dependencies]
axum = "0.6"
hex = "0.4"
itertools = "0.12"
prost = "0.12"
rust-embed = { version = "8", features = ["mime-guess"] }
schnellru = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = { package = "madsim-tonic", version = "0.4.1" }
tracing = "0.1"

[build-dependencies]
tonic-build = { package = "madsim-tonic-build", version = "0.4.2" }
