[package]
name = "otlp-embedded"
description = "In-memory OpenTelemetry trace collector and Web UI visualizer."
version = "0.0.1"
edition = "2021"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
repository = "https://github.com/risingwavelabs/otlp-embedded"
keywords = ["tracing", "opentelemetry", "otlp", "web", "debug"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"

[dependencies]
axum = "0.8"
datasize = { git = "https://github.com/BugenZhao/datasize-rs", rev = "8192cf2d751119a6a30e2ef67e5eb252f8e5b3e5" }
hex = "0.4"
itertools = "0.13"
prost = "0.13"
rust-embed = { version = "8", features = ["mime-guess"] }
schnellru = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tonic = "0.13"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
