[package]
name = "otlp-embedded"
description = "In-memory OpenTelemetry trace collector and Web UI visualizer."
version = "0.0.1"
edition = "2024"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
repository = "https://github.com/risingwavelabs/otlp-embedded"
keywords = ["tracing", "opentelemetry", "otlp", "web", "debug"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"

[dependencies]
axum = "0.8"
get-size2 = { version = "0.7", features = ["derive"] }
hex = "0.4"
itertools = "0.14"
prost = "0.14"
rust-embed = { version = "8", features = ["mime-guess"] }
schnellru = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
